# backend_test_1Game

./: . env.example  .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.db  pyproject.toml
alembic/: env.py
alembic/versions/: 006a1fd8ffaa_initial_migrations.py  06da4eba9090_initial_migrations.py  a4d2f6c1cda8_initial_migrations.py  ab312e91e452_initial_migrations.py  e694e9c35e60_create_tournaments_and_players_tables.py  f5990f0d33cd_create_tournaments_and_players_tables.py
app/: db.py  main.py
app/api/: tournament.py
app/models/: tournament.py
app/repositories/: tournament.py
app/schemas/: tournament.py
app/services/: tournament.py
tests/: test_tournament.py
